--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HardRP</title>
-     <script src="app/bridge.js" defer></script>
-    <script src="../build/app.js" defer></script>
+     <script src="./app/bridge.js" defer></script>
+    <script src="./app/app.js" defer></script>
 </head>
 <body>
     <div id="root"></div>
